--- a/eshop/cmd/web/templates/buy-once.page.gohtml
+++ b/eshop/cmd/web/templates/buy-once.page.gohtml
@@ -22,16 +22,29 @@
       <hr>
 
       <div class="mb-3">
+        <label for="first-name" class="form-label">First Name</label>
+        <input type="text" class="form-control" id="first-name" name="first-name"
+              required="" placeholder="John" required="" autocomplete="first-name-new">
+      </div>
+
+      <div class="mb-3">
+        <label for="last-name" class="form-label">Last Name</label>
+        <input type="text" class="form-control" id="last-name" name="last-name"
+              required="" placeholder="Doe" required="" autocomplete="last-name-new">
+      </div>
+
+      <div class="mb-3">
+        <label for="cardholder-email" class="form-label">Email</label>
+        <input type="email" class="form-control" id="cardholder-email" name="cardholder-email"
+              required="" placeholder="example@email.com" required="" autocomplete="cardholder-email-new">
+      </div>
+
+      <div class="mb-3">
         <label for="cardholder-name" class="form-label">Cardholder Name</label>
         <input type="text" class="form-control" id="cardholder-name" name="cardholder-name"
               required="" placeholder="John Doe" required="" autocomplete="cardholder-name-new">
       </div>
 
-      <div class="mb-3">
-        <label for="cardholder-email" class="form-label">Cardholder Email</label>
-        <input type="email" class="form-control" id="cardholder-email" name="cardholder-email"
-              required="" placeholder="example@email.com" required="" autocomplete="cardholder-email-new">
-      </div>
 
       <div class="mb-3">
         <label for="card-element" class="form-label">Credit Card</label>
