--- a/eshop/cmd/web/templates/terminal.page.gohtml
+++ b/eshop/cmd/web/templates/terminal.page.gohtml
@@ -13,9 +13,9 @@
       class="d-block needs-validation charge-form"
       autocomplete="off" novalidate="">
       <div class="mb-3">
-        <label for="amount" class="form-label">Amount</label>
-        <input type="text" class="form-control" id="amount" name="amount"
-              required="" placeholder="0.00" required="" autocomplete="amount-new">
+        <label for="charge_amount" class="form-label">Amount</label>
+        <input type="text" class="form-control" id="charge_amount" name="charge_amount"
+              required="" placeholder="0.00" required="" autocomplete="charge_amount-new">
       </div>
 
       <div class="mb-3">
@@ -45,6 +45,7 @@
         </div>
       </div>
 
+      <input type="hidden" name="amount" id="amount">
       <input type="hidden" name="payment_intent" id="payment_intent">
       <input type="hidden" name="payment_method" id="payment_method">
       <input type="hidden" name="payment_amount" id="payment_amount">
@@ -54,5 +55,14 @@
 {{end}}
 
 {{define "js"}}
+  <script>
+    document.getElementById("charge_amount", evt => {
+      if(evt.target.value !== "") {
+        document.getElementById("amount").value = evt.target.value * 100;
+      } else {
+        document.getElementById("amount").value = 0;
+      }
+    })
+  </script>
   {{template "stripe-js" .}}
 {{end}}
